[gd_scene load_steps=26 format=3 uid="uid://ty6ca4jgo80g"]

[ext_resource type="Script" uid="uid://d3vjxq8617dwn" path="res://Scenes/Designer/designer.gd" id="1_bef0j"]
[ext_resource type="Script" uid="uid://bmafmlj01k4bv" path="res://Scenes/Designer/designer_camera.gd" id="2_l6knb"]
[ext_resource type="PackedScene" uid="uid://byuspu342y8uo" path="res://UIElements/DesignerUI/designer_left_ui.tscn" id="4_di20i"]
[ext_resource type="Script" uid="uid://bd0wnftpqh8x" path="res://Scripts/canvas_layer.gd" id="4_jhpxb"]
[ext_resource type="Texture2D" uid="uid://be7dabwc7u6ud" path="res://Assets/gridLayout.png" id="4_s2k33"]
[ext_resource type="Texture2D" uid="uid://cii02pptwbck8" path="res://Assets/gridHover.png" id="4_x5v8k"]
[ext_resource type="Script" uid="uid://doqisqrvpvkag" path="res://addons/grid_display/grid_display.gd" id="5_56spr"]
[ext_resource type="Texture2D" uid="uid://dfcdi4s0gq2rd" path="res://Assets/settings.png" id="5_m2eit"]
[ext_resource type="PackedScene" uid="uid://cvboaruh0ukq6" path="res://UIElements/DesignerUI/save_load_ui.tscn" id="5_m8kpb"]
[ext_resource type="Texture2D" uid="uid://egk4wj6w8yla" path="res://Assets/saveIcon.png" id="6_7aako"]
[ext_resource type="Texture2D" uid="uid://omntv6jchgnd" path="res://Assets/settingsHover.png" id="6_jyx4q"]
[ext_resource type="Texture2D" uid="uid://dn5t8hmruyu6v" path="res://Assets/saveHover.png" id="6_m2eit"]
[ext_resource type="PackedScene" uid="uid://bcsgncexysv8y" path="res://UIElements/DesignerUI/designer_settings.tscn" id="6_u8qm0"]
[ext_resource type="PackedScene" uid="uid://bmipt6poqn81l" path="res://Scenes/settings.tscn" id="11_1reo3"]
[ext_resource type="PackedScene" uid="uid://cqxakn03ewye3" path="res://Scenes/load_game.tscn" id="12_8sb1d"]
[ext_resource type="Texture2D" uid="uid://dw1d00s2geaye" path="res://Assets/playHover.png" id="13_r6gme"]
[ext_resource type="Texture2D" uid="uid://bteey1e1u0tm3" path="res://Assets/playButton.png" id="14_aa8cd"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_aa8cd"]
texture = ExtResource("4_x5v8k")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_x5v8k"]
texture = ExtResource("4_s2k33")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_s0afo"]
texture = ExtResource("6_jyx4q")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_jyx4q"]
texture = ExtResource("5_m2eit")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_7aako"]
texture = ExtResource("6_m2eit")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_r6gme"]
texture = ExtResource("6_7aako")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_jhpxb"]
texture = ExtResource("13_r6gme")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_1reo3"]
texture = ExtResource("14_aa8cd")

[node name="Designer" type="Node2D"]
script = ExtResource("1_bef0j")

[node name="DesignerCamera" type="Camera2D" parent="."]
limit_left = 0
limit_top = 0
script = ExtResource("2_l6knb")

[node name="GridDisplay" type="Node2D" parent="."]
z_index = -1
script = ExtResource("5_56spr")
grid_size = Vector2(5000, 5000)
line_size = Vector2(1, 1)
border_width = 1.0

[node name="CanvasLayer" type="CanvasLayer" parent="."]
script = ExtResource("4_jhpxb")

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer"]
clip_contents = true
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -445.0
offset_top = -180.0
offset_right = -253.0
offset_bottom = -116.0
grow_horizontal = 0
grow_vertical = 0
scale = Vector2(2, 2)
size_flags_horizontal = 4
size_flags_vertical = 8

[node name="Panel" type="Panel" parent="CanvasLayer/MarginContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/MarginContainer/Panel"]
layout_mode = 2
offset_right = 192.0
offset_bottom = 64.0

[node name="grid" type="Button" parent="CanvasLayer/MarginContainer/Panel/HBoxContainer"]
layout_mode = 2
theme_override_styles/hover_pressed = SubResource("StyleBoxTexture_aa8cd")
theme_override_styles/hover = SubResource("StyleBoxTexture_aa8cd")
theme_override_styles/normal = SubResource("StyleBoxTexture_x5v8k")
text = "              "

[node name="settings" type="Button" parent="CanvasLayer/MarginContainer/Panel/HBoxContainer"]
layout_mode = 2
theme_override_styles/hover = SubResource("StyleBoxTexture_s0afo")
theme_override_styles/pressed = SubResource("StyleBoxTexture_s0afo")
theme_override_styles/normal = SubResource("StyleBoxTexture_jyx4q")
text = "               "

[node name="load" type="Button" parent="CanvasLayer/MarginContainer/Panel/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/hover = SubResource("StyleBoxTexture_7aako")
theme_override_styles/pressed = SubResource("StyleBoxTexture_7aako")
theme_override_styles/normal = SubResource("StyleBoxTexture_r6gme")

[node name="PopupGrid" type="PopupPanel" parent="CanvasLayer"]
size = Vector2i(800, 600)

[node name="gridControls" type="Control" parent="CanvasLayer/PopupGrid"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 4.0
offset_top = 4.0
offset_right = 796.0
offset_bottom = 596.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="CenterContainer" type="CenterContainer" parent="CanvasLayer/PopupGrid/gridControls"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -577.0
offset_top = -326.0
offset_right = 577.0
offset_bottom = 326.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/PopupGrid/gridControls/CenterContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Label" type="Label" parent="CanvasLayer/PopupGrid/gridControls/CenterContainer/VBoxContainer"]
layout_mode = 2
text = "TEST"

[node name="Label2" type="Label" parent="CanvasLayer/PopupGrid/gridControls/CenterContainer/VBoxContainer"]
layout_mode = 2
text = "line width"

[node name="HSlider" type="HSlider" parent="CanvasLayer/PopupGrid/gridControls/CenterContainer/VBoxContainer"]
layout_mode = 2
min_value = 1.0
max_value = 5.0
value = 1.0
tick_count = 5
ticks_on_borders = true

[node name="Label4" type="Label" parent="CanvasLayer/PopupGrid/gridControls/CenterContainer/VBoxContainer"]
layout_mode = 2
text = "cell size"

[node name="OptionButton" type="OptionButton" parent="CanvasLayer/PopupGrid/gridControls/CenterContainer/VBoxContainer"]
layout_mode = 2
item_count = 4
popup/item_0/text = "16"
popup/item_0/id = 0
popup/item_1/text = "32"
popup/item_1/id = 1
popup/item_2/text = "64"
popup/item_2/id = 2
popup/item_3/text = "128"
popup/item_3/id = 3

[node name="Label3" type="Label" parent="CanvasLayer/PopupGrid/gridControls/CenterContainer/VBoxContainer"]
layout_mode = 2
text = "visibility"

[node name="CheckBox" type="CheckBox" parent="CanvasLayer/PopupGrid/gridControls/CenterContainer/VBoxContainer"]
layout_mode = 2
button_pressed = true

[node name="snapBox" type="CheckBox" parent="CanvasLayer/PopupGrid/gridControls/CenterContainer/VBoxContainer"]
layout_mode = 2
button_pressed = true
text = "Grid Snap"

[node name="exit" type="Button" parent="CanvasLayer/PopupGrid/gridControls/CenterContainer/VBoxContainer"]
layout_mode = 2
text = "exit"

[node name="PopupSettings" type="PopupPanel" parent="CanvasLayer"]
auto_translate_mode = 1
size = Vector2i(1280, 720)

[node name="Settings" parent="CanvasLayer/PopupSettings" instance=ExtResource("11_1reo3")]
visible = false
offset_left = 4.0
offset_top = 4.0
offset_right = 1276.0
offset_bottom = 716.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="PopupLoad" type="PopupPanel" parent="CanvasLayer"]
size = Vector2i(1400, 800)

[node name="LoadGame" parent="CanvasLayer/PopupLoad" instance=ExtResource("12_8sb1d")]
offset_left = 4.0
offset_top = 4.0
offset_right = 1396.0
offset_bottom = 796.0

[node name="accordion_menu" parent="CanvasLayer" instance=ExtResource("4_di20i")]
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="SaveLoad" parent="CanvasLayer" instance=ExtResource("5_m8kpb")]
visible = false
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
grow_horizontal = 1
grow_vertical = 1

[node name="DesignerSettings" parent="CanvasLayer" instance=ExtResource("6_u8qm0")]
visible = false
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
grow_horizontal = 1
grow_vertical = 1

[node name="play" type="Button" parent="CanvasLayer"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -237.0
offset_right = -190.0
offset_bottom = 31.0
grow_horizontal = 0
scale = Vector2(5, 5)
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_styles/hover_pressed = SubResource("StyleBoxTexture_jhpxb")
theme_override_styles/hover = SubResource("StyleBoxTexture_jhpxb")
theme_override_styles/normal = SubResource("StyleBoxTexture_1reo3")

[node name="save" type="Button" parent="CanvasLayer"]
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -44.0
offset_top = -15.5
offset_bottom = 15.5
grow_horizontal = 0
grow_vertical = 2
text = "Save"

[node name="load" type="Button" parent="CanvasLayer"]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -31.0
offset_right = 46.0
grow_vertical = 0
text = "Load"

[node name="SavePopup" type="PopupPanel" parent="CanvasLayer"]
initial_position = 1
size = Vector2i(145, 101)

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/SavePopup"]
offset_left = 4.0
offset_top = 4.0
offset_right = 141.0
offset_bottom = 97.0

[node name="Label" type="Label" parent="CanvasLayer/SavePopup/VBoxContainer"]
layout_mode = 2
text = "Enter Save Name:"

[node name="save_line_edit" type="LineEdit" parent="CanvasLayer/SavePopup/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/SavePopup/VBoxContainer"]
layout_mode = 2

[node name="confirmsave" type="Button" parent="CanvasLayer/SavePopup/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "confirm"

[node name="cancelsave" type="Button" parent="CanvasLayer/SavePopup/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "cancel"

[connection signal="pressed" from="CanvasLayer/MarginContainer/Panel/HBoxContainer/grid" to="CanvasLayer" method="_on_grid_pressed"]
[connection signal="pressed" from="CanvasLayer/MarginContainer/Panel/HBoxContainer/settings" to="CanvasLayer" method="_on_settings_pressed"]
[connection signal="pressed" from="CanvasLayer/MarginContainer/Panel/HBoxContainer/load" to="CanvasLayer" method="_on_load_pressed"]
[connection signal="value_changed" from="CanvasLayer/PopupGrid/gridControls/CenterContainer/VBoxContainer/HSlider" to="." method="set_line_and_border_width"]
[connection signal="item_selected" from="CanvasLayer/PopupGrid/gridControls/CenterContainer/VBoxContainer/OptionButton" to="." method="set_cell_size"]
[connection signal="toggled" from="CanvasLayer/PopupGrid/gridControls/CenterContainer/VBoxContainer/CheckBox" to="." method="toggle_grid"]
[connection signal="toggled" from="CanvasLayer/PopupGrid/gridControls/CenterContainer/VBoxContainer/snapBox" to="." method="toggle_grid_snap"]
[connection signal="pressed" from="CanvasLayer/PopupGrid/gridControls/CenterContainer/VBoxContainer/exit" to="." method="_on_exit_pressed"]
[connection signal="pressed" from="CanvasLayer/play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="CanvasLayer/save" to="." method="_on_save_pressed"]
[connection signal="pressed" from="CanvasLayer/load" to="." method="_on_load_pressed"]
[connection signal="pressed" from="CanvasLayer/SavePopup/VBoxContainer/HBoxContainer/confirmsave" to="." method="_on_save_confirmed"]
